# wfc

./: CMakeLists.txt  LICENSE  README.md
example/: thing.cpp
include/wfc-test/: STLStateSet.hpp  dynamicFlagset.hpp  dynamic_flagset.hpp  state.hpp  stateDefinition2D.hpp  stateSet.hpp  staticFlagset.hpp  static_flagset.hpp  tileset.hpp  wfc.hpp
src/: stbi.c
